[project]
name = "agmarknet-mcp"
version = "0.1.0"
description = "MCP Server for Agmarknet Commodity Prices"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Krishna Baldwa" }
]
dependencies = [
    "mcp",
    "httpx",
    "python-dotenv",
    "pydantic"
]

[project.scripts]
agmarknet-mcp = "agmarknet_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
